/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.infra.client.longrunningservice;

import "src/devtools/mobileharness/shared/version/proto/version.proto";

option java_package = "com.google.devtools.mobileharness.infra.client.longrunningservice.proto";
option java_outer_classname = "VersionServiceProto";

service VersionService {
  // Gets version information.
  rpc GetVersion(GetVersionRequest) returns (GetVersionResponse);
}

message GetVersionRequest {}

message GetVersionResponse {
  // Required.
  //
  // Version.LAB_VERSION.toString().
  //
  // Deprecated. Use versions instead.
  string lab_version = 1;

  // Optional.
  //
  // GitHub commit ID from which the server was built, if any.
  //
  // Deprecated. Use versions instead.
  string github_version = 2;

  // Required.
  //
  // The process ID of the running server.
  int64 process_id = 3;

  // Required.
  //
  // Version.CLIENT_VERSION.toString().
  //
  // Deprecated. Use versions instead.
  string client_version = 4;

  // Required.
  //
  // Version information of the server.
  //
  // Since MH lab 4.320.0.
  mobileharness.shared.version.Versions versions = 5;
}
